# password-gl

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
password_gl/: generator.py
